--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "url": "git@github.com:stekhn/state-owned-enterprises.git"
   },
   "scripts": {
-    "start": "node node_modules/http-server/bin/http-server -d false --cors"
+    "start": "concurrently 'node service/service.js' 'node node_modules/http-server/bin/http-server -d false --cors'"
   },
   "dependencies": {
     "awesomplete": "^1.1.1",
     "express": "^4.14.0",
     "mongoose": "^4.6.5"
+  },
+  "devDependencies": {
+    "concurrently": "^3.1.0",
+    "http-server": "^0.9.0"
   }
 }
