--- a/package.json
+++ b/package.json
@@ -13,8 +13,12 @@
   },
   "dependencies": {
     "awesomplete": "^1.1.1",
+    "body-parser": "^1.15.2",
+    "cookie-parser": "^1.4.3",
     "express": "^4.14.0",
-    "mongoose": "^4.6.5"
+    "mongoose": "^4.6.5",
+    "morgan": "^1.7.0",
+    "pug": "^2.0.0-beta6"
   },
   "devDependencies": {
     "concurrently": "^3.1.0",
